fixed spacing to px from em

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -20,7 +20,8 @@ body {
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   display: flex;
   align-items: center;
-  gap: 1em;
+  gap: 16px;
+  padding: 8px;
 }
 
 .profile-image {
@@ -36,7 +37,6 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
-  margin-left: 0.5em;
 }
 
 button {
@@ -59,7 +59,7 @@ ul {
 
 .links {
   display: flex;
-  gap: 1em;
+  gap: 16px;
 }
 
 .notifications {
